# deepcraft-studio-accelerators

./: README.md
AnomalousVibrationDetection/: README.md
BabyCryDetection/: README.md
BatteryStateOfChargeEstimation/: BatteryStateOfChargeEstimation.improj
BatteryStateOfChargeEstimation/Data/test/test0degC_0/: data.data  label.data  test0degC_0.imsession
BatteryStateOfChargeEstimation/Data/test/test0degC_1/: data.data  label.data  test0degC_1.imsession
BatteryStateOfChargeEstimation/Data/test/test0degC_2/: data.data  label.data  test0degC_2.imsession
BatteryStateOfChargeEstimation/Data/test/test0degC_3/: data.data  label.data  test0degC_3.imsession
BatteryStateOfChargeEstimation/Data/test/test0degC_4/: data.data  label.data  test0degC_4.imsession
BatteryStateOfChargeEstimation/Data/test/test10degC_0/: data.data  label.data  test10degC_0.imsession
BatteryStateOfChargeEstimation/Data/test/test10degC_1/: data.data  label.data  test10degC_1.imsession
BatteryStateOfChargeEstimation/Data/test/test10degC_2/: data.data  label.data  test10degC_2.imsession
BatteryStateOfChargeEstimation/Data/test/test10degC_3/: data.data  label.data  test10degC_3.imsession
BatteryStateOfChargeEstimation/Data/test/test10degC_4/: data.data  label.data  test10degC_4.imsession
BatteryStateOfChargeEstimation/Data/test/test25degC_0/: data.data  label.data  test25degC_0.imsession
BatteryStateOfChargeEstimation/Data/test/test25degC_1/: data.data  label.data  test25degC_1.imsession
BatteryStateOfChargeEstimation/Data/test/test25degC_2/: data.data  label.data  test25degC_2.imsession
BatteryStateOfChargeEstimation/Data/test/test25degC_3/: data.data  label.data  test25degC_3.imsession
BatteryStateOfChargeEstimation/Data/test/test25degC_4/: data.data  label.data  test25degC_4.imsession
BatteryStateOfChargeEstimation/Data/train/train10degC_to_25degC_0/: data.data  label.data  train10degC_to_25degC_0.imsession
BatteryStateOfChargeEstimation/Data/train/train10degC_to_25degC_1/: data.data  label.data  train10degC_to_25degC_1.imsession
BatteryStateOfChargeEstimation/Data/train/train10degC_to_25degC_10/: data.data  label.data  train10degC_to_25degC_10.imsession
BatteryStateOfChargeEstimation/Data/train/train10degC_to_25degC_11/: data.data  label.data  train10degC_to_25degC_11.imsession
BatteryStateOfChargeEstimation/Data/train/train10degC_to_25degC_12/: data.data  label.data  train10degC_to_25degC_12.imsession
BatteryStateOfChargeEstimation/Data/train/train10degC_to_25degC_13/: data.data  label.data  train10degC_to_25degC_13.imsession
BatteryStateOfChargeEstimation/Data/train/train10degC_to_25degC_14/: data.data  label.data  train10degC_to_25degC_14.imsession
BatteryStateOfChargeEstimation/Data/train/train10degC_to_25degC_15/: data.data  label.data  train10degC_to_25degC_15.imsession
BatteryStateOfChargeEstimation/Data/train/train10degC_to_25degC_16/: data.data  label.data  train10degC_to_25degC_16.imsession
BatteryStateOfChargeEstimation/Data/train/train10degC_to_25degC_17/: data.data  label.data  train10degC_to_25degC_17.imsession
BatteryStateOfChargeEstimation/Data/train/train10degC_to_25degC_18/: data.data  label.data  train10degC_to_25degC_18.imsession
BatteryStateOfChargeEstimation/Data/train/train10degC_to_25degC_19/: data.data  label.data  train10degC_to_25degC_19.imsession
ChainsawDetection/: README.md
DrillMaterialDetectionIMU/: README.md
DrillMaterialDetectionMicrophone/: README.md
FallDetection/: README.md
GesturesDetectionCapsense/: README.md
GroundObstacleDetectionTOF/: GroundObstacleDetectionTOF.improj  README.md  metadata.json
GroundObstacleDetectionTOF/Resources/: ROYALE_VIEWER.md  YOLO_README.md  requirements.txt
GroundObstacleDetectionTOF/Resources/5.12.0.3089_royale/: CHANGELOG.txt
GroundObstacleDetectionTOF/Resources/5.12.0.3089_royale/samples/: CMakeLists.txt  README_samples.md
GroundObstacleDetectionTOF/Resources/5.12.0.3089_royale/samples/cpp/sampleCameraInfo/: CMakeLists.txt  sampleCameraInfo.cpp
GroundObstacleDetectionTOF/Resources/5.12.0.3089_royale/samples/cpp/sampleEventListener/: CMakeLists.txt  sampleEventListener.cpp
GroundObstacleDetectionTOF/Resources/5.12.0.3089_royale/samples/cpp/sampleExportPLY/: CMakeLists.txt  sampleExportPLY.cpp
GroundObstacleDetectionTOF/Resources/5.12.0.3089_royale/samples/cpp/sampleIReplay/: CMakeLists.txt  sampleIReplay.cpp
GroundObstacleDetectionTOF/Resources/5.12.0.3089_royale/samples/cpp/sampleMultiCamera/: CMakeLists.txt  sampleMultiCamera.cpp
GroundObstacleDetectionTOF/Resources/5.12.0.3089_royale/samples/cpp/sampleProcessingParameters/: CMakeLists.txt  sampleProcessingParameters.cpp
GroundObstacleDetectionTOF/Resources/5.12.0.3089_royale/samples/cpp/sampleQtViewer/: CMakeLists.txt
GroundObstacleDetectionTOF/Resources/5.12.0.3089_royale/samples/cpp/sampleQtViewer/inc/: sampleQtViewer.hpp
GroundObstacleDetectionTOF/Resources/5.12.0.3089_royale/samples/cpp/sampleQtViewer/src/: main.cpp  sampleQtViewer.cpp
GroundObstacleDetectionTOF/Resources/5.12.0.3089_royale/samples/cpp/sampleRecordRRF/: CMakeLists.txt  sampleRecordRRF.cpp
GroundObstacleDetectionTOF/Resources/5.12.0.3089_royale/samples/cpp/sampleTcpClient/: CMakeLists.txt  sampleTcpClient.cpp
GroundObstacleDetectionTOF/Resources/5.12.0.3089_royale/samples/inc/sample_utils/: EventReporter.hpp  PlatformResources.hpp
GroundObstacleDetectionTOF/Resources/data_collection/: copy_image_from_royale.ipynb
GroundObstacleDetectionTOF/Resources/realtime/: OZT378_data_collection.py  new_tof_functions.py
GunshotDetection/: README.md
HomeSoundsDetection/: README.md
HumanActivity/: README.md
KeywordDetector/: README.md
MotorImbalanceDetection/: README.md
MovementTypeDetection/: README.md
PresenceDetectionVision/: README.md
RoadUsersDetection/: README.md
RockPaperScissorsDetection/: README.md
SirenDetection/: README.md
SurfaceDetectionMicrophone/: README.md
TermiteDetection/: README.md
TouchDetection/: README.md
WaterDetection/: README.md
(+194900 files in other folders)
